# python-latex

./: .buildinfo  Capitulos.html  Instrucciones.html  Instrucciones.md  Parte1.html  Parte1.ipynb  Parte2.html  README.html  README.md  _config.yml  _toc.yml  acceso.html  acceso.md  acceso1.html  algor1.ipynb  apendice1.md  celdas.html  celdas1.html  celdas1.ipynb  celdas2.html  celdas2.ipynb  genindex.html  intro.html  intro.md  myst.yml  objects.inv  requirements.txt  search.html  searchindex.js  sympy.html  sympy1.html
.github/workflows/: build-book.yml
_build/.doctrees/: Capitulos.doctree  Instrucciones.doctree  Parte1.doctree  Parte2.doctree  README.doctree  acceso.doctree  acceso1.doctree  apendice1.doctree  celdas.doctree  celdas1.doctree  celdas2.doctree  (+4 more)
_sources/: Capitulos.md  Parte2.ipynb  README.md  apendice1.md
compylatex/: README.html  README.md  pyproject.toml
compylatex/examples/: calculo.tex  calculo_result.tex
compylatex/src/: converter.py  executor.py  parser.py
compylatex/src/compylatex/: __init__.py  converter.py  executor.py  parser.py
pages/: acceso.md  acceso1.html  acceso1.ipynb  algor.md  algor1.html  apendice1.html  apendice1.md  celdas.md  celdas1.html  celdas1.ipynb  celdas2.html  compylatex.html  intro.html  intro.md  preliminares.html  preliminares.md  sympy.md  sympy1.html
pylatexenc/: README.html  README.md  calc.py  calc2.py  calculo.aux  calculo.tex  calculo2.aux  calculo2.tex  calculo3.aux  calculo3.tex  calculo_resultado.aux  calculo_resultado.tex  compylatex.py  from pylatexenc.py  parse_blocks.py  tex_to_python.py
(+45 files in other folders)
